[package]
name = "leet_fuzzer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
rayon = "1.11.0"
rayon-progress = "1.0.0"
uiua = { git = "https://github.com/uiua-lang/uiua", default-features = false, features = ["batteries"] }
